# wasmuter

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: constants.rs  encoder.rs  export.rs  expression.rs  function_type.rs  import.rs  index.rs  lib.rs  limits.rs  main.rs  memory.rs  module.rs  opcode.rs  section.rs  table.rs
src/section/: code_section.rs  data_section.rs  element_section.rs  export_section.rs  function_section.rs  global_section.rs  import.rs  import_section.rs  memory_section.rs  mod.rs  start_section.rs  table_section.rs  type_section.rs
