[package]
name = "wasmuter"
version = "0.1.0"
authors = ["Zach Stone <zach@zerovolts.com>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/zerovolts/wasmuter"
repository = "https://github.com/zerovolts/wasmuter"
description = "WebAssembly binary encoder"
readme = "README.md"
keywords = ["wasm", "webassembly", "bytecode", "encoder"]
categories = ["wasm", "encoding"]